[project]
name = "bingwallpaper-py"
version = "0.1.7"
description = "Download script for Bing daily wallpapers."
authors = [{name="Jens Korinth", email="jens.korinth@tuta.io"}]
repository = "https://github.com/jkorinth/bingwallpaper-py"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pillow>=11.0.0",
    "requests>=2.32.3",
]

[project.scripts]
bingwallpaper = "bingwallpaperpy.bingwallpaper:download"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "./bingwallpaperpy" ]
